.cct.txt
   Compiling gam v0.2.1 (/Users/user/gam)
error[E0560]: struct `BSplineBasisSpec` has no field named `boundary_condition`
   --> tests/test_support/margslope_flex_equivalence.rs:105:17
    |
105 |                 boundary_condition: Default::default(),
    |                 ^^^^^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
105 |                 boundary_conditions: Default::default(),
    |                                   +

error[E0063]: missing field `boundary` in initializer of `DuchonBasisSpec`
   --> tests/test_support/margslope_flex_equivalence.rs:117:19
    |
117 |             spec: DuchonBasisSpec {
    |                   ^^^^^^^^^^^^^^^ missing `boundary`

error[E0308]: mismatched types
   --> tests/test_support/margslope_flex_equivalence.rs:126:27
    |
126 |                 periodic: false,
    |                           ^^^^^ expected `Option<Vec<Option<f64>>>`, found `bool`
    |
    = note: expected enum `Option<Vec<Option<f64>>>`
               found type `bool`

Some errors have detailed explanations: E0063, E0308, E0560.
For more information about an error, try `rustc --explain E0063`.
error: could not compile `gam` (test "margslope_flex_biobank_repro") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0063]: missing field `boundary` in initializer of `DuchonBasisSpec`
   --> tests/biobank_reml_stress.rs:140:23
    |
140 |                 spec: DuchonBasisSpec {
    |                       ^^^^^^^^^^^^^^^ missing `boundary`

error[E0308]: mismatched types
   --> tests/biobank_reml_stress.rs:152:31
    |
152 |                     periodic: false,
    |                               ^^^^^ expected `Option<Vec<Option<f64>>>`, found `bool`
    |
    = note: expected enum `Option<Vec<Option<f64>>>`
               found type `bool`

Some errors have detailed explanations: E0063, E0308.
error: could not compile `gam` (test "biobank_reml_stress") due to 2 previous errors
